--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="css/homepage.css">
         <script src="https://kit.fontawesome.com/9c0c3e0988.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/master.css">
-        <script src="https://unpkg.com/@popperjs/core@2"></script>
+        <!-- <script src="https://unpkg.com/@popperjs/core@2"></script> -->
     </head>
     <title>Book Cabs Nearby at Best Price</title>
     <body>
@@ -21,7 +21,7 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                             <div class="navbar-nav ml-auto">
-                                <a class="nav-item nav-link" href="#">About</a>
+                                <a class="nav-item nav-link" href="html/aboutus.html">About</a>
                                 <a class="nav-item nav-link" href="#">Contact</a>
                                 <a class="nav-item nav-link" href="#">Login</a>
                                 <a class="nav-item nav-link" href="#">Signup</a>
@@ -35,7 +35,7 @@
                 <div class="card-img-overlay">
                 <h1 class="card-title">the <span id="title">be<span id="titlepart">s</span>t</span><br>in town.</h1>
                 <!-- <p class="card-text">Always there!</p> -->
-                <button class="btn btn-light">Book Now</button>
+                <button class="btn btn-light" onclick="location.href='../Cab Booking/html/bookingpage.html'">Book Now</button>
                 </div>
             </div>
             <p id="scrolldown">Scroll Down</p>
