--- a/html/bookingpage.html
+++ b/html/bookingpage.html
@@ -240,6 +240,6 @@
     };
     
         </script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNJjiJiUBBI0WhrIuZJ409zioWqawiSqs&libraries=places&callback=initMap"async defer></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places&callback=initMap"async defer></script>
     </body>
 </html>
