--- a/html/dive.html
+++ b/html/dive.html
@@ -10,7 +10,7 @@
             <link rel="stylesheet" href="../css/homepage.css">
             <link rel="stylesheet" href="../css/master.css">
         </head>
-
+<title>Diversity | Link Cabs</title>
 
 <div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top text-dark ">
