--- a/html/safety.html
+++ b/html/safety.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="../css/homepage.css">
         <link rel="stylesheet" href="../css/master.css">
 </head>
+<title>Safety | Link Cabs</title>
 
 <div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top text-dark ">
