--- a/html/tech.html
+++ b/html/tech.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="../css/homepage.css">
         <link rel="stylesheet" href="../css/master.css">
 </head>
-
+<title>Technology | Link Cabs</title>
 <div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top text-dark ">
         <div class="container">
